# Data-Crawler

./: .gitignore  PRD.md  Readme.md  steam_games.csv
gaming_crawler/: .gitignore  metacritic_scraper.py  pyproject.toml  steam_scraper.py
gaming_crawler/Scripts/: Data_clean.py  Master_Dataset_Final.csv  Merge_datasets.py  SQLlite.py  epic_games_scraper.py  gog_scraper.py  humble_scraper.py  instantgaming.py  metacritic_scraper.py  new_Epic_script.py  rawg_io_scraper.py  steam_scraper.py
gaming_crawler/Scripts/Database_files/: Games_Database.db
gaming_crawler/Scripts/scraped_data/: steam_games_media.csv  steam_games_new.csv
gaming_crawler/scraped_data/: steam_games.csv  steam_games_new.csv
scraped_data/: metacritic_games.csv
